Adds accent yellow and text color variables
Introduces new CSS variables for accent yellow and text color. Updates styling in HTML and CSS to utilize these variables. Enhances design consistency by applying accent yellow to headers and footer elements while using text color for body text.

--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -52,6 +52,7 @@
         <ul>
           <li><strong>Primary Green (#22663f):</strong> Used for headings, buttons, and highlights.</li>
           <li><strong>Light Background Green (#f5fff5):</strong> Used as the main background color to give a calm, natural feel.</li>
+          <li><strong>Accent Yellow (#f2c94c):</strong> Used for call-to-action buttons, highlights, and to draw attention to important information.</li>
         </ul>
       </section>
 
