Removes unused links and updates image handling
Eliminates redundant navigation links across multiple HTML files to streamline the menu structure. Updates image handling in the JavaScript file by switching from `imageURL` to `logo` for improved consistency. Deletes the unused `events.html` file.

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Directory of Chamber of Commerce">
+    <meta name="description" content="Discover businesses and organizations in Lilongwe.">
     <meta name="author" content="Michael Kazembe">
-    <title>Thank You | Malawi Chamber of Commerce</title>
+    <title>Discover | Malawi Chamber of Commerce</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logo-favicon.png" sizes="16x16">
 
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="Directory | Malawi Chamber of Commerce">
-    <meta property="og:description" content="Discover businesses and organizations in the Malawi Chamber of Commerce directory.">
+    <meta property="og:description" content="Discover businesses and organizations in Lilongwe.">
     <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/chamber/images/logo-1-primary.png">
-    <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/chamber/discover.html">
     <meta property="og:type" content="website">
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="stylesheet" href="styles/form.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +30,6 @@
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
-    <script src="scripts/thankyou.js" defer></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous" defer></script>
@@ -45,7 +43,7 @@
         </div>
         <ul id="menu-list">
           <li><a href="index.html">Home</a></li>
-          <li><a href="discover.html">Discover Lilongwe</a></li>
+          <li><a href="discover.html" class="active">Discover Lilongwe</a></li>
           <li><a href="directory.html">Directory</a></li>
           <li><a href="join.html">Join Us</a></li>
         </ul>
@@ -56,8 +54,8 @@
       </nav>
     </header>
     <main>
-      <div id="thank-you"></div>
-
+      <h1>Discover Malawi</h1>
+      
     </main>
     <footer class="footer">
       <div class="footer-container">
