Adds visit sections and enhances Discover page content
Introduces a dynamic 'Visit' section across multiple pages for improved user engagement. Enhances the Discover page with updated content, styling, and dynamic item insertion support. Refines CSS for design consistency, responsiveness, and accessibility.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,10 +46,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="discover.html">Discover Lilongwe</a></li>
           <li><a href="directory.html" class="active">Directory</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="blog.html">Blog</a></li>
           <li><a href="join.html">Join Us</a></li>
         </ul>
         <div>
@@ -93,6 +89,10 @@
             height="75"
             loading="lazy"
           >
+        </div>
+        <!-- Visit Section -->
+        <div class="visit">
+          <!-- Insert visit Data Dynamically -->
         </div>
 
         <!-- Social Media Links -->
