--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -29,6 +29,8 @@
     
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/discover.js" defer></script>
+    <script src="scripts/visit.js" defer></script>  
     <script src="scripts/date.js" defer></script>
 
     <!-- Icons -->
@@ -54,7 +56,11 @@
       </nav>
     </header>
     <main>
-      <h1>Discover Malawi</h1>
+      <h1>Discover Lilongwe</h1>
+      <p>Explore the vibrant businesses and organizations in Lilongwe, Malawi's capital city. From local markets to international companies, discover what makes our city unique.</p>
+      <section class="discover-section">
+        <!-- Insert 8 Items Dynamically -->
+      </section>
       
     </main>
     <footer class="footer">
@@ -68,6 +74,10 @@
             height="75"
             loading="lazy"
           >
+        </div>
+        <!-- Visit Section -->
+        <div class="visit">
+          <!-- Insert visit Data Dynamically -->
         </div>
 
         <!-- Social Media Links -->
