--- a/chamber/index.html
+++ b/chamber/index.html
@@ -96,6 +96,10 @@
             loading="lazy"
           >
         </div>
+        <!-- Visit Section -->
+        <div class="visit">
+          <!-- Insert visit Data Dynamically -->
+        </div>
 
         <!-- Social Media Links -->
         <div class="footer-social">
