--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,6 +32,7 @@
     <script src="scripts/events.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/spotlight.js" defer></script>
+    <script src="scripts/visit.js" defer></script>
     <script src="scripts/date.js" defer></script>
 
     <!-- Icons -->
