--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -20,6 +20,7 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
 
     <!-- Fonts -->
