Adds membership tiers and modal functionality
Introduces detailed membership tiers with associated benefits, including NP, Bronze, Silver, and Gold. Adds modals for displaying tier-specific details. Updates styling for improved layout and responsiveness.

Enhances user experience by providing clearer membership options and interactive modal views.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,6 +31,7 @@
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/members.js" defer></script>
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/visit.js" defer></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous" defer></script>
