Updates button labels for clarity and consistency
Replaces the "Become a Member" button label with "Submit Membership Application" to improve clarity for users.

Adjusts the "See Benefits" button to remove the unused `href` attribute, ensuring consistent behavior with modal functionality.

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -153,7 +153,7 @@
           type="hidden"
         >
 
-        <button type="submit" class="btn btn-primary">Become a Member</button>
+        <button type="submit" class="btn btn-primary">Submit Membership Application</button>
 
       </form>
 
@@ -179,7 +179,7 @@
       <div class="membership-card gold">
         <h3>Gold Membership</h3>
         <p>Premium membership with top-tier benefits, including personalized support and exclusive networking events.</p>
-        <button type="button" href="#" class="membership-info-link" data-modal="modal-gold">See Benefits</button>
+        <button type="button" class="membership-info-link" data-modal="modal-gold">See Benefits</button>
       </div>
 
     </section>
