Updates og:url meta tags to reflect correct page URLs
Replaces outdated og:url meta tags in index.html and join.html
with URLs pointing to the correct pages. Ensures accurate
sharing link previews for improved user experience.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Directory | Malawi Chamber of Commerce">
     <meta property="og:description" content="Discover businesses and organizations in the Malawi Chamber of Commerce directory.">
     <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/chamber/images/logo-1-primary.png">
-    <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/chamber/index.html">
     <meta property="og:type" content="website">
 
     <!-- CSS Files -->
