--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Michael Kazembe">
-    <title>Home | Malawi Chamber of Commerce</title>
-    
+    <title>Site Plan| PlantCare Hub</title>
+
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="styles/site-plan.css">
