--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -67,10 +67,10 @@
       <section>
         <h2>Wireframe</h2>
         <h3>Mobile View</h3>
-        <img src="wireframe-mobile.png" alt="Mobile wireframe layout">
+        <img src="images/wireframe-mobile.png" alt="Mobile wireframe layout" width="100">
 
         <h3>Desktop View</h3>
-        <img src="wireframe-desktop.png" alt="Desktop wireframe layout">
+        <img src="images/wireframe-desktop.png" alt="Desktop wireframe layout" width="250" height="500">
       </section>
     </main>
     <footer class="footer">
