Hero Section complete with styling

--- a/project/index.html
+++ b/project/index.html
@@ -30,6 +30,7 @@
     <!-- Javascript Files -->
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/plants.js" defer></script>
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/4ea4219760.js" crossorigin="anonymous" defer></script>
@@ -43,8 +44,8 @@
         </div>
         <ul id="menu-list">
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="plant-care.html">Plant Care</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="plant-library.html">Plant Library</a></li>
+          <li><a href="my-plants.html">My Plants</a></li>
         </ul>
       </nav>
         <div>
@@ -53,7 +54,32 @@
         </div>
     </header>
     <main>
-
+      <section class="hero-section">
+        <div class="hero-container">
+          <div>
+            <div class="hero-text">
+              <h1 class="hero-title">Welcome to PlantCare Hub</h1>
+              <p class="hero-description">Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.</p>
+            </div>
+            <div class="hero-buttons">
+              <a href="plant-library.html" class="primary-button btn-primary">Explore Plants</a>
+              <a href="my-plants.html" class="secondary-button btn-secondary">Start My Collection</a>
+            </div>
+          </div>
+          <img src='http://unsplash.it/700/300?gravity=center' alt='hero-image' class="hero-image" width="700" height="300" loading="lazy">
+        </div>
+      </section>
+      <!-- <section class="benefits-section">Benefits of Indoor Plants</section>   -->
+      <!-- <section id="plant-section">
+        <h1>Plant Directory</h1>
+        <div id="plant-cards" class="card-container"></div>
+        <button id="show-more">Show More</button> 
+      </section> -->
+      <!-- <section>Popular Plants</section>
+      <section>Getting Started Guide</section>
+      <section>Testimonials</section>
+      <section>Contact Us</section>
+      <section>Ready To Start Plant Journey</section> -->
       
     </main>
     <footer class="footer">
