Ready section styled

--- a/project/index.html
+++ b/project/index.html
@@ -66,7 +66,7 @@
               <a href="my-plants.html" class="secondary-button btn-secondary">Start My Collection</a>
             </div>
           </div>
-          <img src='http://unsplash.it/700/300?gravity=center' alt='hero-image' class="hero-image" width="700" height="300" loading="lazy">
+          <img src='http://unsplash.it/700/350?gravity=center' alt='hero-image' class="hero-image" width="700" height="350" loading="lazy">
         </div>
       </section>
       <!-- <section class="benefits-section">Benefits of Indoor Plants</section>   -->
@@ -78,9 +78,21 @@
       <!-- <section>Popular Plants</section>
       <section>Getting Started Guide</section>
       <section>Testimonials</section>
-      <section>Contact Us</section>
-      <section>Ready To Start Plant Journey</section> -->
-      
+      <section>Contact Us</section> -->
+      <section class="start-section">
+        <div class="start-container">
+          <div>
+            <div class="start-text">
+              <h2 class="start-title">Ready to Start Your Plant Journey?</h2>
+              <p class="start-description">Join thousands of plant parents who have transformed their homes with beautiful, healthy houseplants.</p>
+            </div>
+            <div class="start-buttons">
+              <a href="plant-library.html" class="start-primary-btn btn btn-primary">Browse Plant Library</a>
+              <a href="my-plants.html" class="start-secondary-btn btn">Start Plant Collection</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer-container">
