Adds hero and benefits sections with styling updates
Introduces a hero section and benefits section to enhance content and visual appeal. Updates styles to support new sections, including font sizes, secondary text color, and benefits-specific styling. Improves semantic structure and accessibility.

--- a/project/index.html
+++ b/project/index.html
@@ -54,6 +54,7 @@
         </div>
     </header>
     <main>
+      <!-- HERO SECTION -->
       <section class="hero-section">
         <div class="hero-container">
           <div>
@@ -69,14 +70,41 @@
           <img src='http://unsplash.it/700/350?gravity=center' alt='hero-image' class="hero-image" width="700" height="350" loading="lazy">
         </div>
       </section>
-      <!-- <section class="benefits-section">Benefits of Indoor Plants</section>   -->
+
+      <!-- BENEFITS SECTION -->
+      <section class="benefits-section">
+        <div class="benefits-container">
+          <div>
+            <h2>Benefits of Indoor Plants</h2>
+            <p>Transform your living space with the natural beauty and health benefits of houseplants</p>
+          </div>
+          <div class="benefits">
+            <div class="benefits-item">        
+              <i class="fas fa-lungs" aria-hidden="true"></i>
+              <h3>Improve Air Quality</h3>
+              <p>Plants naturally filter toxins and produce fresh oxygen.</p> 
+            </div>
+            <div class="benefits-item">
+              <i class="fas fa-heart" aria-hidden="true"></i>
+              <h3>Reduce Stress</h3>
+              <p>Caring for plants promotes relaxation and mindfulness.</p>
+            </div>
+            <div class="benefits-item">
+              <i class="fas fa-house" aria-hidden="true"></i>
+              <h3>Enhance Your Space</h3>
+              <p>Add natural beauty and beauty to any room.</p>
+            </div>
+          </div>
+          </div>
+      </section>  
+      
+      
       <!-- <section id="plant-section">
         <h1>Plant Directory</h1>
         <div id="plant-cards" class="card-container"></div>
         <button id="show-more">Show More</button> 
       </section> -->
       <!-- <section>Popular Plants</section>
-      <section>Getting Started Guide</section>
       <section>Testimonials</section>
       <section>Contact Us</section> -->
       <section class="start-section">
