Enhances plant directory with descriptions and UI improvements
Adds detailed descriptions to plant entries in the JSON data file, improving user understanding of plant care requirements. Updates the HTML structure and styling to include new sections such as "Popular Plants" and a "Getting Started Guide," enhancing usability and visual appeal. Refines the plant card layout in JavaScript and CSS for modernized design and better responsiveness. Reduces initial visible cards for better focus. Improves overall UI consistency and accessibility.

--- a/project/index.html
+++ b/project/index.html
@@ -98,15 +98,52 @@
           </div>
       </section>  
       
-      
-      <!-- <section id="plant-section">
-        <h1>Plant Directory</h1>
-        <div id="plant-cards" class="card-container"></div>
-        <button id="show-more">Show More</button> 
-      </section> -->
+      <!-- POPULAR PLANTS -->
+      <section id="popular-section">
+        <div class="popular-container">
+          <div>
+            <h2>Popular</h2>
+            <p>Start your plant journey with these easy-to-care-for favorites</p>
+          </div> 
+          <div id="plant-cards" class="card-container"></div>
+          <button id="show-more" class="btn btn-primary">Show More</button>
+        </div>
+      </section>
       <!-- <section>Popular Plants</section>
       <section>Testimonials</section>
       <section>Contact Us</section> -->
+
+      <!-- GUIDE SECTION -->
+      <section class="guide-section">
+        <div class="guide-container">
+          <div>
+            <h2>Getting Started Guide</h2>
+            <p>Follow these simple steps to begin your plant care journey</p>
+          </div>
+          <div class="guide">
+            <div class="guide-item">       
+              <h3 class="guide-number">1</h3>
+              <h4>Choose Your Plant</h4>
+              <p>Plants naturally filter toxins and produce fresh oxygen.</p> 
+            </div>
+            <div class="guide-item">
+              <h3 class="guide-number">2</h3>
+              <h4>Learn Care Basics</h4>
+              <p>Caring for plants promotes relaxation and mindfulness.</p>
+            </div>
+            <div class="guide-item">
+              <h3 class="guide-number">3</h3>
+              <h4>Track Your Plants</h4>
+              <p>Add natural beauty and beauty to any room.</p>
+            </div>
+            <div class="guide-item">
+              <h3 class="guide-number">4</h3>
+              <h4>Watch Them Thrive</h4>
+              <p>Connect with fellow plant lovers for tips and support.</p>
+          </div>
+          </div>
+      </section> 
+      <!-- START SECTION -->
       <section class="start-section">
         <div class="start-container">
           <div>
