Enhances plant data and updates website structure
Adds detailed attributes to plant data including origin, soil, temperature, and humidity. Reorganizes web pages with improved descriptions, navigation, and visuals to better support plant care guidance. Introduces new pages for "My Plants" and "Plant Library" with dynamic functionality. Updates hero image and UI styling for consistency and usability.

--- a/project/index.html
+++ b/project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Directory of Chamber of Commerce">
+    <meta name="description" content="Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.">
     <meta name="author" content="Michael Kazembe">
     <title>Home | PlantCare Hub</title>
     
@@ -12,8 +12,8 @@
 
     <!-- Facebook Open Graph Meta Tags -->
     <meta property="og:title" content="Home | PlantCare Hub">
-    <meta property="og:description" content="Discover businesses and organizations in the Malawi Chamber of Commerce directory.">
-    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/project/images/logo-1-primary.png">
+    <meta property="og:description" content="Your beginner-friendly guide to keeping houseplants happy and healthy. Learn proper care techniques and build confidence in plant parenting.">
+    <meta property="og:image" content="https://github.com/MichaelKazembe/wdd231/blob/main/project/images/logos/logo-light-transparent.png">
     <meta property="og:url" content="https://michaelkazembe.github.io/wdd231/project/index.html">
     <meta property="og:type" content="website">
 
@@ -46,6 +46,7 @@
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="plant-library.html">Plant Library</a></li>
           <li><a href="my-plants.html">My Plants</a></li>
+          <li><a href="care-tips.html">Care Tips</a></li>
         </ul>
       </nav>
         <div>
@@ -67,7 +68,7 @@
               <a href="my-plants.html" class="secondary-button btn-secondary">Start My Collection</a>
             </div>
           </div>
-          <img src='http://unsplash.it/700/350?gravity=center' alt='hero-image' class="hero-image" width="700" height="350" loading="lazy">
+          <img src='images/hero-image.webp' alt='hero-image' class="hero-image" width="700" height="350" loading="lazy">
         </div>
       </section>
 
@@ -105,13 +106,11 @@
             <h2>Popular</h2>
             <p>Start your plant journey with these easy-to-care-for favorites</p>
           </div> 
-          <div id="plant-cards" class="card-container"></div>
-          <button id="show-more" class="btn btn-primary">Show More</button>
+          <div id="popular-plants" class="card-container"></div>
+          <a href="plant-library.html" class="btn btn-primary">Find More</a>
         </div>
       </section>
-      <!-- <section>Popular Plants</section>
-      <section>Testimonials</section>
-      <section>Contact Us</section> -->
+
 
       <!-- GUIDE SECTION -->
       <section class="guide-section">
