--- a/project/plant-library.html
+++ b/project/plant-library.html
@@ -20,6 +20,7 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/plant-library.css">
 
     <!-- Fonts -->
