Adds featured plant cards and 'Show More' button
Enhances the 'Popular' section by introducing featured plant cards with images and descriptions to improve user engagement. Replaces the 'Find More' link with a 'Show More' button for better interactivity.

--- a/project/index.html
+++ b/project/index.html
@@ -104,10 +104,24 @@
           <div>
             <h2>Popular</h2>
             <p>Start your plant journey with these easy-to-care-for favorites</p>
-          </div> 
-          <div id="popular-plants" class="card-container"></div>
-          <a href="plant-library.html" class="btn btn-primary">Find More</a>
         </div>
+          <div id="popular-cards" class="card-container">
+            <figure>
+              <img src="images/hero-image.webp" alt="Monstera" class="card-image" width="300" height="200" loading="lazy">
+              <figcaption>
+                <h3>Monstera Deliciosa</h3>
+                <p>Also known as the Swiss Cheese Plant, this tropical beauty is perfect for beginners.</p>
+              </figcaption>
+            </figure>
+            <figure>
+              <img src="images/hero-image.webp" alt="Snake Plant" class="card-image" width="300" height="200" loading="lazy">
+              <figcaption>
+                <h3>Snake Plant</h3>
+                <p>Known for its air-purifying qualities, this hardy plant thrives in low light.</p>
+              </figcaption>
+            </figure>
+          </div>
+          <button id="show-more-popular" class="btn btn-primary">Show More</button>
       </section>
 
 
